# tedutil

./: .gitignore  .travis.yml  README.md  acc.txt  myf_monthly.py  pyproject.toml  setup.py
.github/workflows/: codecov.yml  run-tests.yml
old/: create_database.py  parser_text.py
tedutil/: __init__.py  acc_parse.py  accounting.py  afm.py  afm_amka_generator.py  amka.py  calculator.py  dec.py  decorators.py  fake_data_generator.py  file_fix_size.py  files.py  fixed_size_file.py  graccounts.py  grdate.py  grscc_book.py  grtext.py  logger.py  myf.py  myf_monthly.old.py  myf_monthly.py  observer.py  osyk.py  payroll.py  sqlite.py  table2pdf.py  taxes.py  validators.py
tedutil/accounting/: __init__.py  account.py  book.py  book_from_file.py  company.py  config.py  levels.py  simulation.py  transaction.py  transaction_line.py
tedutil/tests/: acc.txt  accounts.txt  algorithm-f2.txt  algorithm.txt  anoigma.txt  f2-template.html  graccount_data.json  lines.txt  linsa.txt  mis.csv  named.csv  osyk.zio  test_acc_parse.py  test_accounting.py  test_afm.py  test_amka.py  test_calculator.py  test_dec.py  test_fake_data_generator.py  test_file_fix_size.py  test_files.py  test_fixed_size_file.py  test_graccounts.py  test_grdate.py  test_grtext.py  test_grup.py  test_iso2gr.py  test_logger.py  test_make_file.py  test_osyk.py  (+3 more)
tests/: acc.txt  acc_ee.txt  accounts.txt  graccount_data.json  test_acc_parse.py  test_dec.py  test_fixed_size_file.py  test_graccounts.py  test_grcc_book.py  test_grdate.py  test_grtext.py  test_payroll.py  test_pickle.py  test_taxes.py  test_validators.py
